k8s-manifests/wild-west-kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wildwest
  namespace: wildwest
  labels:
    app: wildwest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wildwest
  template:
    metadata:
      labels:
        app: wildwest
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: wildwest
        image: gshipley/wildwest:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
