k8s-manifests/wild-west-kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wildwest
  namespace: wildwest
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: wildwest.simplyzee.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: wildwest
          servicePort: 8080
  tls:
  - hosts:
    - wildwest.simplyzee.dev
    secretName: wildwest-tls
